canvas - fix stat icon not showing

--- a/www/style.css
+++ b/www/style.css
@@ -167,6 +167,7 @@ main {
 
 .staticon img,
 .btn--staticon img {
+	height: auto;
 	vertical-align: middle;
 	width: 20px;
 }
